@@ -1,6 +1,6 @@
 #
 #
-# $Id: daemontools.spec.in,v 1.49 2024-07-01 20:11:30+05:30 Cprogrammer Exp mbhangui $
+# $Id: daemontools.spec.in,v 1.50 2024-11-12 16:02:00+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -78,7 +78,7 @@ BuildRequires: mariadb-connector-c-devel
 %else
 BuildRequires: mysql-devel
 %endif
-BuildRequires: libqmail-devel
+BuildRequires: libqmail-devel > 1.3
 
 ##################################### OBS ####################################
 %if %build_on_obs == 1
